--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -11,6 +11,7 @@
     align-items: center;
     padding: 0 3rem;
     color: $white-primary;
+    z-index: 999;
 
     @include respond(tab-port) {
         flex-direction: column;
